--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jackypot.io</title>
+  <meta name="author" content="Jackypot.io">
+  <meta name="robots" content="index, follow"/>
+  <meta name="distribution" content="global"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="Description" content="It is a slot game that uses the technology of Ethereum using an smart contract, which offers a betting service in a random and safe way. Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.">
+  <title>jackypot.io - Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.</title>
+
+      <!-- Icon -->
+      <link rel="icon" type="image/ico" href="favicon.ico" sizes="16x16" />
+
+      <!-- Styles -->
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/collapse.css">
       <link rel="stylesheet" href="css/responsive.css">
+      
+      <!-- Script -->
       <script type="text/javascript" src="js/snap.svg.js"></script>
       <script type="text/javascript" src="js/blockies.js"></script>
       <script type="text/javascript" src="js/clipboard.js"></script>
@@ -120,7 +132,7 @@
 
                 </div>
                 <div class="chat" id="chat-con">
-                    <div id="tlkio" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+                    <div id="tlkio" data-custom-css="http://jackypot.io/css/chat.css" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
                 </div>
             </div>
             <!-- Collapse only movil version -->
