--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <ul>
                             <li onclick="closed_window()" id="play">PLAY</li>
                             <li onclick="show_window(this.id)" id="faqs">FAQS</li>
-                            <li onclick="show_window(this.id)" id="token">FREE TOKEN <span class="span-nav">HOT</span></li>
+                            <li onclick="show_window(this.id)" id="free-bets">FREE BETS <span class="span-nav">HOT</span></li>
                             <li onclick="openModal(this.id)" id="contract">CONTRACT</li>
                             <li onclick="show_window(this.id)" id="terms">TERMS</li>
                             <li onclick="show_window(this.id)" id="contact">CONTACT</li>
@@ -132,7 +132,7 @@
 
                 </div>
                 <div class="chat" id="chat-con">
-                    <div id="tlkio" data-custom-css="http://jackypot.io/css/chat.css" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+                    <div id="tlkio" data-custom-css="https://jackypot.io/css/chat.css" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
                 </div>
             </div>
             <!-- Collapse only movil version -->
@@ -484,6 +484,40 @@
                 </ol>
             </div>
         </div>
+        <!-- Free bets -->
+        <div class="free-bets" id="free-bets-window">
+            <!-- Contendor de grid -->
+            <div class="contenedor-free-bets">
+                <div class="free-bets-promocion">
+                    <!-- Contenedor de la promocion -->
+                    <div class="contenedor-promocion">
+                        
+                    </div>
+                </div>
+                <div class="free-bets-datos" id="contenedor-free-bets">
+                    <!-- Contenedor de los datos -->
+                    <div class="contenedor-Bdatos">
+                        <h2 class="">Check your free bets</h2>
+                        <div class="search">
+                            <input type="text" name="addres-bets">
+                            <button type="button" id="btn-private">Personal</button>
+                            <button type="button" id="btn-all">All</button>
+                        </div>
+                        <div class="title-bets">
+                            <div class="title-adr">
+                                <p>Address</p>
+                            </div>
+                            <div class="title-bets">
+                                <p>Free bets</p>
+                            </div>
+                        </div>
+                        <div class="con-table" id="con-table">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Terminos -->
         <div class="terms" id="terms-window">
             <h2>Terms and Conditions</h2>
@@ -635,6 +669,6 @@
     </div>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/form.js"></script>
-    <script type="text/javascript" src="js/machine.js"></script>
+    <!-- <script type="text/javascript" src="js/machine.js"></script> -->
 </body>
 </html>
