Add promotion img

--- a/index.html
+++ b/index.html
@@ -491,7 +491,9 @@
                 <div class="free-bets-promocion">
                     <!-- Contenedor de la promocion -->
                     <div class="contenedor-promocion">
-
+                        <div class="img-promo">
+                            <img src="assets/freeBets/promo.png" alt="" class="img-fluid" height="250px">
+                        </div>
                     </div>
                 </div>
                 <div class="free-bets-datos" id="contenedor-free-bets">
