Add responsive at the section FT

--- a/index.html
+++ b/index.html
@@ -181,10 +181,41 @@
                             <p>5. Good luck!</p>
                         </div>
                     </div>
-                    <!-- BETS -->
+                    <!-- Free bets -->
                     <div class="tab">
                         <input id="tab-two" type="checkbox" name="tabs">
-                        <label for="tab-two">BETS</label>
+                        <label for="tab-two">FREE BETS</label>
+                        <div class="tab-content">
+                            <img src="assets/freeBets/promo-2.png" alt="" class="img-promo-acostada">
+                            <div class="contenedor-btn-reglas">
+                                <p onclick="openModal(this.id)" id="reglas">Read promotion rules</p>
+                            </div>
+                                <!-- Contenedor de los datos -->
+                            <div class="contenedor-Bdatos">
+                                <h2 class="">Check your free bets</h2>
+                                <div class="search">
+                                    <input type="text" name="addres-bets">
+                                    <button type="button" id="btn-private">Personal</button>
+                                    <button type="button" id="btn-all">All</button>
+                                </div>
+                                <div class="title-bets">
+                                    <div class="title-adr">
+                                        <p>Address</p>
+                                    </div>
+                                    <div class="title-bets">
+                                        <p>Free bets</p>
+                                    </div>
+                                </div>
+                                <div class="con-table" id="con-table-m">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- BETS -->
+                    <div class="tab">
+                        <input id="tab-three" type="checkbox" name="tabs">
+                        <label for="tab-three">BETS</label>
                         <div class="tab-content">
                             <div id="datos-m">
 
@@ -193,8 +224,8 @@
                     </div>
                     <!-- FAQS -->
                     <div class="tab">
-                        <input id="tab-three" type="checkbox" name="tabs">
-                        <label for="tab-three">FAQS</label>
+                        <input id="tab-four" type="checkbox" name="tabs">
+                        <label for="tab-four">FAQS</label>
                         <!-- Contenido -->
                         <div class="tab-content">
                             <h2>Frequent questions</h2>
@@ -297,8 +328,8 @@
                     </div>
                     <!-- Contrato -->
                     <div class="tab">
-                        <input id="tab-four" type="checkbox" name="tabs">
-                        <label for="tab-four">CONTRACT</label>
+                        <input id="tab-five" type="checkbox" name="tabs">
+                        <label for="tab-five">CONTRACT</label>
                         <div class="tab-content">
                             <p>Our games are totally and completely open-source and free to use, enter to <a href="https://github.com/Jackypot/Jackypot-slot">GitHub</a>. All data are public and can be viewed at <a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code">www.etherscan.io</a></p>
                             <div class="img-git">
@@ -308,8 +339,8 @@
                     </div>
                     <!-- Terminos -->
                     <div class="tab">
-                        <input id="tab-five" type="checkbox" name="tabs">
-                        <label for="tab-five">TERMS</label>
+                        <input id="tab-six" type="checkbox" name="tabs">
+                        <label for="tab-six">TERMS</label>
                         <div class="tab-content">
                             <h2>Terms and Conditions</h2>
                             <ul>
@@ -344,8 +375,8 @@
                     </div>
                     <!-- Contactanos -->
                     <div class="tab">
-                        <input id="tab-six" type="checkbox" name="tabs">
-                        <label for="tab-six">CONTACT US</label>
+                        <input id="tab-seven" type="checkbox" name="tabs">
+                        <label for="tab-seven">CONTACT US</label>
                         <div class="tab-content">
                             <h2>Contact Us</h2>
                             <input type="text" name="" value="" placeholder="Name" class="show-input" id="name-m">
@@ -361,7 +392,7 @@
                 <div class="container-footer">
                     <div class="social-media">
                         <div class="social-img">
-                            <a href="https://www.facebook.com/jackypotoficial/" target="_blank" title="Facebook">
+                            <a href="https://www.facebook.com/jackypotofficial/" target="_blank" title="Facebook">
                                 <img src="assets/footer/facebook.png" alt="">
                             </a>
                             <a href="https://www.reddit.com/user/Jackypot-official/" target="_blank" title="Reddit">
@@ -492,8 +523,9 @@
                     <!-- Contenedor de la promocion -->
                     <div class="contenedor-promocion">
                         <div class="img-promo">
-                            <img src="assets/freeBets/promo.png" alt="" class="img-fluid" height="250px">
-                            <div class="">
+                            <img src="assets/freeBets/promo-2.png" alt="" class="img-promo-acostada">
+                            <img src="assets/freeBets/promo.png" alt="" class="img-fluid img-promo-pie" height="250px">
+                            <div class="contenedor-btn-reglas">
                                 <p onclick="openModal(this.id)" id="reglas">Read promotion rules</p>
                             </div>
                         </div>
