Add icon at the section contact

--- a/index.html
+++ b/index.html
@@ -602,9 +602,20 @@
                 <div class="informacion-adicional">
                     <h2>If you have any questions or wish to get in touch with us directly enter:</h2>
                     <p>contact@jackypot.io</p>
-                    <p>Twitter: <a href="https://twitter.com/JackypotEth" target="_blank">@JackypotETH</a></p>
-                    <p>Facebook: <a href="https://www.facebook.com/jackypotoficial/" target="_blank">Jackypotoficial</a></p>
-                    <p>Reddit: <a href="https://www.reddit.com/user/Jackypot-official/" target="_blank">Jackypot-official</a></p>
+                    <table>
+                        <tr>
+                            <td><img src="assets/footer/twitter.png" alt=""></td>
+                            <td><p>Twitter: <a href="https://twitter.com/JackypotEth" target="_blank">@JackypotETH</a></p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="assets/footer/facebook.png" alt=""></td>
+                            <td><p>Facebook: <a href="https://www.facebook.com/jackypotofficial/" target="_blank">Jackypotoficial</a></p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="assets/footer/reddit.png" alt=""></td>
+                            <td><p>Reddit: <a href="https://www.reddit.com/user/Jackypot-official/" target="_blank">Jackypot-official</a></p></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -622,10 +633,10 @@
                 <div class="modal-body">
                     <p>Our games are totally and completely open-source and free to use, enter to GitHub. All data are public and can be viewed at www.etherscan.io</p>
                     <ul class="git">
-                      <li><a href="https://github.com/Jackypot/Jackypot-slot">https://github.com/Jackypot/Jackypot-slot</a></li>
+                      <li><a href="https://github.com/Jackypot/Jackypot-slot" target="_blank">https://github.com/Jackypot/Jackypot-slot</a></li>
                     </ul>
                     <ul class="eth">
-                        <li><a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code">https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code</a></li>
+                        <li><a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code" target="_blank">https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code</a></li>
                     </ul>
                 </div>
             </div>
