--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
                         <li>And everything that is beyond our control.</li>
                     </ol>
                 </li>
+                <li>The minimum bet required in jackypot is .01 ETH and the maximum bet is 20 ETH.</li>
                 <li>You are aware that by using our services and playing you may lose ETHER, and only you are fully responsible for any loss.</li>
                 <li>You understand that it takes a few minutes for the process to play.</li>
                 <li>We do not take charge of the delay in which the information is reflected in the system between the Blockchain, Etherscan, Oraclize and Random networks.</li>
