Add new rules in the promotion section

--- a/index.html
+++ b/index.html
@@ -731,17 +731,63 @@
                     <p>3. The url of the transaction made in the promotion thread must be published.</p>
                     <p>4. The public address that is in the url is to which the free bets are sent.</p>
                     <p>5. You will be awarded  free .01 ETH bets until you reach the lost amount.</p>
-                    <p>6. Each bet is awarded within 4 hours of your last free bet.</p>
-                    <p>7. No other free bet can be awarded until you play the previously one</p>
+                    <p>6. Bets are delivered between 3:00 and 11:00 p.m. Respecting the UTC Schedule.</p>
+                    <p>7. Each bet is awarded within 4 hours of your last free bet.</p>
+                    <p>8. No other free bet can be awarded until you play the previously one</p>
                     <p class="strong">Example 1:</p>
                     <p class="italic">Betting: .01 ETH = 1 free bet of .01 ETH</p>
+                    <table>
+                        <tr>
+                            <th class="borde-vertical">Betting amount</th>
+                            <th class="borde-vertical">Free bets</th>
+                            <th>Value of the bet</th>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal borde-vertical">.01 ETH</td>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                    </table>
                     <p class="strong">Ejemplo 2:</p>
+                    <table>
+                        <tr>
+                            <th class="borde-vertical">Betting amount</th>
+                            <th class="borde-vertical">Free bets</th>
+                            <th>Value of the bet</th>
+                        </tr>
+                        <tr>
+                            <td rowspan="5" class="borde-horizontal borde-vertical">.05 ETH</td>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal borde-vertical">1 Bet free</td>
+                            <td class="borde-horizontal">.01 ETH</td>
+                        </tr>
+                        <tr>
+                            <td class="borde-horizontal"></td>
+                            <td class="borde-horizontal borde-vertical"></td>
+                            <td class="borde-horizontal">Total: .05 ETH</td>
+                        </tr>
+                    </table>
                     <p class="italic">Betting: .05 ETH = 5 free bets .01 ETH</p>
                     <p>In the course of 4 hours, you will be awarded 1 bet of .01 ETH</p>
-                    <p>If the first free bet is charged at 2:00 p.m., the next bet will be awarded at 6 p. M. At most, but if that bet is played until 7 p.m., the 4 hours will start running from that moment.</p>
+                    <p>If the first free bet is charged at 3:00 p.m. (UTC), the next bet will be awarded at 7 p. M. (UTC) at most, but if that bet is played until 8 p.m. (UTC). The 4 hours will start running from that moment.</p>
                     <p>* Until it reaches the amount of bets that matches the reward.</p>
                     <p>8. To collect the free bets, you must make the transaction at 0 ETH in our contract, or click on the following link:</p>
-                    <p>9. This promotion is valid until the existence of the 2,000 available refunds is exhausted. (A refund equals a free bet of: 0.01 ETH), or until the limited date of March 31, 2018.</p>
+                    <p>10. This promotion is valid until the existence of the 2,000 available refunds is exhausted. (A refund equals a free bet of: 0.01 ETH), or until the limited date of March 31, 2018.</p>
                     <p></p>
                 </div>
             </div>
