Changes MSJ Address

--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
                     <!-- Contenedor de la promocion -->
                     <h2>YOU LOST?</h2>
                     <h2>YOU WIN!</h2>
+                    <!-- Slider -->
                     <div class="contenedor-slider">
                         <div class="slider">
                             <div class="slider-content">
@@ -567,6 +568,12 @@
                                 <p><span class="negro">8.</span> To collect the free bets, you must make the transaction at 0 ETH in our contract.</p>
                                 <p><span class="negro">9.</span> Promotion valid until awarding 2000 free throws or until March 31, 2018.</p>
                             </div>
+                        </div>
+                    </div>
+                    <!-- Controles slider -->
+                    <div class="contenedor-controles">
+                        <div class="controls">
+                            <ul></ul>
                         </div>
                     </div>
                     <button type="button" name="button" class="btn-free-bet">Go post</button>
