--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
 
                 </div>
                 <div class="chat" id="chat-con">
+                    <div id="disqus_thread"></div>
+                        <script>
+                            var disqus_config = function () {
+                                this.page.url = "http://Jackypot.io";  // Replace PAGE_URL with your page's canonical URL variable
+                                this.page.identifier = "jackypot"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                            };
+
+                            (function() { // DON'T EDIT BELOW THIS LINE
+                                var d = document, s = d.createElement('script');
+                                s.src = 'https://jackypot.disqus.com/embed.js';
+                                s.setAttribute('data-timestamp', +new Date());
+                                (d.head || d.body).appendChild(s);
+                            })();
+                        </script>
+                        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                     <!-- <div id="tlkio" data-custom-css="https://jackypot.io/css/chat.css" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script> -->
                 </div>
             </div>
