Change in css and fonts

--- a/launch-offer-2000-free-bets/index.html
+++ b/launch-offer-2000-free-bets/index.html
@@ -16,14 +16,14 @@
         <!-- Navegacion y contenedor del logo -->
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo"><img src="logo.png" alt="Logo"></a>
+                <a href="https://jackypot.io/" class="brand-logo"><img src="logo.png" alt="Logo"></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#">PLAY</a></li>
-                    <li><a href="#">FAQS</a></li>
-                    <li><a href="#">FREE BETS</a></li>
-                    <li><a href="#">CONTRACT</a></li>
-                    <li><a href="#">TERM</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="https://jackypot.io/">PLAY</a></li>
+                    <li><a href="https://jackypot.io/">FAQS</a></li>
+                    <li><a href="https://jackypot.io/">FREE BETS</a></li>
+                    <li><a href="https://jackypot.io/">CONTRACT</a></li>
+                    <li><a href="https://jackypot.io/">TERM</a></li>
+                    <li><a href="https://jackypot.io/">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
