--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
       <meta name="Description" content="It is a slot game that uses the technology of Ethereum using an smart contract, which offers a betting service in a random and safe way. Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.">
       <title>jackypot.io - Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.</title>
 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109935038-1"></script>
+      <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+
+       gtag('config', 'UA-109935038-1');
+      </script>
+
+      <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+          (function (d, w, c) {
+              (w[c] = w[c] || []).push(function() {
+                  try {
+                      w.yaCounter47341086 = new Ya.Metrika2({
+                          id:47341086,
+                          clickmap:true,
+                          trackLinks:true,
+                          accurateTrackBounce:true,
+                          webvisor:true
+                      });
+                  } catch(e) { }
+              });
+
+              var n = d.getElementsByTagName("script")[0],
+                  s = d.createElement("script"),
+                  f = function () { n.parentNode.insertBefore(s, n); };
+              s.type = "text/javascript";
+              s.async = true;
+              s.src = "https://mc.yandex.ru/metrika/tag.js";
+
+              if (w.opera == "[object Opera]") {
+                  d.addEventListener("DOMContentLoaded", f, false);
+              } else { f(); }
+          })(document, window, "yandex_metrika_callbacks2");
+        </script>
+        <!-- /Yandex.Metrika counter -->
+
       <!-- Icon -->
       <link rel="icon" type="image/ico" href="favicon.ico" sizes="16x16" />
 
@@ -141,20 +180,22 @@
                 <div class="chat" id="chat-con">
                     <div id="disqus_thread"></div>
                         <script>
-                            var disqus_config = function () {
-                                this.page.url = "http://Jackypot.io";  // Replace PAGE_URL with your page's canonical URL variable
-                                this.page.identifier = "jackypot"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                            };
+                            setTimeout(function(){
+                                var disqus_config = function () {
+                                    this.page.url = "http://Jackypot.io";  // Replace PAGE_URL with your page's canonical URL variable
+                                    this.page.identifier = "jackypot"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                                };
 
-                            (function() { // DON'T EDIT BELOW THIS LINE
-                                var d = document, s = d.createElement('script');
-                                s.src = 'https://jackypot.disqus.com/embed.js';
-                                s.setAttribute('data-timestamp', +new Date());
-                                (d.head || d.body).appendChild(s);
-                            })();
+                                (function() { // DON'T EDIT BELOW THIS LINE
+                                    var d = document, s = d.createElement('script');
+                                    s.src = 'https://jackypot.disqus.com/embed.js';
+                                    s.setAttribute('data-timestamp', +new Date());
+                                    (d.head || d.body).appendChild(s);
+                                })();
+
+                            }, 8000);
                         </script>
                         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                    <!-- <div id="tlkio" data-custom-css="https://jackypot.io/css/chat.css" data-channel="Jackypot" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script> -->
                 </div>
             </div>
             <!-- Collapse only movil version -->
@@ -510,7 +551,9 @@
             </div>
         </div>
         <!-- Seccion de Sonido del juego -->
-    	<div id="contenedor-sonido" class="sonido-juego"> </div>
+    	<div id="contenedor-sonido" class="sonido-juego">
+            <audio id="sonido_game"><source src="assets/audio/sonido1.mp3" type="audio/mpeg" /></audio>
+        </div>
         <!-- Preguntas frecuentes -->
         <div class="faqs" id="faqs-window">
             <h2>Frequent questions</h2>
