Se añadio Hover a la seccion de resultados

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     Gwei required: 21.</p>
                             </div>
                         </div>
-                        <p>Wait for the result from 1 to 2 minutes, in <a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2" title="Etherscan.io" target="_blank" class="links">Etherscan.io</a> or in our <a title="Bets" onclick="getfocus()" class="links">Bets</a>.</p>
+                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Results</a>.</p>
                         <p>3. Our prizes are:</p>
                         <div class="contenedor-premios">
                                 <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -165,8 +165,8 @@
                             <p class="remove" id="bet-machine">Profit</p>
                         </div>
                     </div>
-                    <div class="btn-play">
-                        <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
+                    <div class="btn-play" id="contenedor_btn_machine">
+                        
                     </div>
                 </div>
             </div>
