Se coloco el btn de play en la maquina

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="btn-play" id="contenedor_btn_machine">
-                        
+                        <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
                     </div>
                 </div>
             </div>
