--- a/index.html
+++ b/index.html
@@ -155,18 +155,14 @@
                         </div>
                     </div>
                     <!-- Form -->
-                    <div class="address-machine">
-                        <div class="contenedor-address">
-                            <p class="remove" id="address-machine">Ethereum Wallet Address Of The Participant</p>
-                        </div>
+                    <div class="address-machine" id="contenedor_address_machine">
+                        <!-- Aqui se escribe desde el JS -->
                     </div>
-                    <div class="bet">
-                        <div class="contenedor-profit">
-                            <p class="remove" id="bet-machine">Profit</p>
-                        </div>
+                    <div class="bet" id="contenedor_apuesta_machine">
+                        <div class="contenedor-profit"> <p class="remove" id="bet-machine">Profit</p> </div>
                     </div>
                     <div class="btn-play" id="contenedor_btn_machine">
-                        <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
+
                     </div>
                 </div>
             </div>
