Se cambio el nobre de bets a resultados en su respectiva seccion

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <!-- Chat -->
             <div class="box information" id="chat">
                 <div class="tittle-chat" onclick="change_focus()">
-                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> BETS</span></h3>
+                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> RESULT(BETS)</span></h3>
                 </div>
                 <div id="datos">
 
@@ -222,7 +222,7 @@
                                         Gwei required: 21.</p>
                                 </div>
                             </div>
-                            <p>Wait for the result from 1 to 2 minutes, in <a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2" title="Etherscan.io" target="_blank" class="links">Etherscan.io</a> or in our bets.</p>
+                            <p>Wait for the result from 1 to 2 minutes, in results.</p>
                             <p>3. Our prizes are:</p>
                             <div class="contenedor-premios">
                                     <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -316,7 +316,7 @@
                     <!-- BETS -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
-                        <label for="tab-three">BETS</label>
+                        <label for="tab-three">RESULT(BETS)</label>
                         <div class="tab-content">
                             <div id="datos-m">
 
