Se cambio el nobre de bets a resultados en su respectiva seccion

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- BETS -->
+                    <!-- Resultados -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
                         <label for="tab-three">BETS</label>
