Se cambio el resultado por bet

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <!-- Chat -->
             <div class="box information" id="chat">
                 <div class="tittle-chat" onclick="change_focus()">
-                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> RESULT(BETS)</span></h3>
+                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> BETS</span></h3>
                 </div>
                 <div id="datos">
 
@@ -316,7 +316,7 @@
                     <!-- BETS -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
-                        <label for="tab-three">RESULT(BETS)</label>
+                        <label for="tab-three">BETS</label>
                         <div class="tab-content">
                             <div id="datos-m">
 
