--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <p class="remove" id="bet-machine">Profit</p>
                         </div>
                     </div>
-                    <div class="btn-play" id="contenedor_btn_machine">
+                    <div class="btn-play">
                         <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Resultados -->
+                    <!-- BETS -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
                         <label for="tab-three">BETS</label>
