Cambio en la interfaz dependiendo si se tiene o no metamask

--- a/index.html
+++ b/index.html
@@ -157,12 +157,14 @@
                     <!-- Form -->
                     <div class="address-machine" id="contenedor_address_machine">
                         <!-- Aqui se escribe desde el JS -->
+                        <input type="text" name="address_game" value="" id="direccion_usuario">
                     </div>
                     <div class="bet" id="contenedor_apuesta_machine">
-                        <div class="contenedor-profit"> <p class="remove" id="bet-machine">Profit</p> </div>
+                        <!-- Aqui se escribe desde el JS -->
+                        <input type="number" name="bet_game" value="" id="apuesta_usuario">
                     </div>
                     <div class="btn-play" id="contenedor_btn_machine">
-
+                        <!-- Aqui se escribe desde el JS -->
                     </div>
                 </div>
             </div>
