--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <!-- Form -->
                     <div class="address-machine" id="contenedor_address_machine">
                         <!-- Aqui se escribe desde el JS -->
-                        
+
                     </div>
                     <div class="bet" id="contenedor_apuesta_machine">
                         <!-- Aqui se escribe desde el JS -->
@@ -704,7 +704,8 @@
                 </div>
                 <div class="free-bets-datos" id="contenedor-free-bets">
                     <!-- Contenedor de los datos -->
-                    <div class="contenedor-Bdatos">
+                    <h2 style="color: yellow; margin-top:50px; font-size: 60px;">Coming Soon</h2>                    
+                    <!-- <div class="contenedor-Bdatos">
                         <h2 class="">Check your free bets</h2>
                         <div class="search">
                             <input type="text" name="addres-bets">
@@ -722,7 +723,7 @@
                         <div class="con-table" id="con-table">
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
