se añadio el coming soon a free bets

--- a/index.html
+++ b/index.html
@@ -706,7 +706,8 @@
                 </div>
                 <div class="free-bets-datos" id="contenedor-free-bets">
                     <!-- Contenedor de los datos -->
-                    <div class="contenedor-Bdatos">
+                    <h2 style="font-size: 60px; color: yellow; margin-top: 20px;">COMING SOON</h2>
+                    <!-- <div class="contenedor-Bdatos">
                         <h2 class="">Check your free bets</h2>
                         <div class="search">
                             <input type="text" name="addres-bets">
@@ -724,7 +725,7 @@
                         <div class="con-table" id="con-table">
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
