Se agrego scroll al chat

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 </div>
             </div>
             <!-- Footer -->
-            <div class="box footer">
+            <!-- <div class="box footer">
                 <div class="container-footer">
                     <div class="social-media">
                         <div class="social-img">
@@ -549,7 +549,7 @@
                         <div class="btn-news" onclick="show_window(this.id)" id="transparencia"><span>TRANSPARENCY</span></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- Seccion de Sonido del juego -->
     	<div id="contenedor-sonido" class="sonido-juego">
